The filtering popover should be fixed width. https://trello.com/c/j8V6Pthx/80-when-you-select-enough-filters-that-they-don-t-fit-under-the-field-name-the-popover-gets-wider-and-then-truncates-it-should-just

--- a/ui/client-react/src/components/facet/facet.scss
+++ b/ui/client-react/src/components/facet/facet.scss
@@ -50,8 +50,7 @@
 .facetsMenuContainer .facetMenuPopup.popover {
     border-radius: 3px;
     border-color : $facetMenu-BorderColor;
-    min-width: 300px;
-    max-width: 98%;
+    width: 300px;
     position: absolute;
     margin-left: -29px;
     > .arrow {
@@ -127,6 +126,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       padding-left: 15px;
+      padding-right: 5px;
     }
 
     .panel-default {
